[package]
name = "breachops-docs"
version = "0.1.0"
description = """
Generate a
"""
authors = ["skyeBreach <skyebreach@proton.me>"]
categories = ["command-line-utilities"]
keywords = ["cli"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/skyeBreach/breachops-nav"
homepage = "https://github.com/skyeBreach/breachops-nav"
repository = "https://github.com/skyeBreach/breachops-nav"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "bodoc"
path = "src/main.rs"
bench = false

[dependencies]
